--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "5.0.0-alpha.32",
+    "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
@@ -16,6 +17,8 @@
     "auth0-lock": "^11.32.2",
     "auth0-lock-passwordless": "^2.2.3",
     "axios": "^0.26.1",
+    "jquery": "^3.6.0",
+    "mapbox-gl": "^2.7.1",
     "node-sass": "^7.0.1",
     "notistack": "^2.0.3",
     "react": "^17.0.1",
