--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "auth0": "^2.40.0",
+    "axios": "^0.26.1",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "joi": "^17.6.0",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.9"
   }
