--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,14 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "track patients & Stay Safe!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest && --runInBand",
+    "serve": "nodemon index.js",
+    "start": "node index.js",
+    "client": "npm start --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
