--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.3",
     "joi": "^17.6.0",
     "mongodb": "^4.4.1",
-    "mongoose": "^6.2.9"
+    "mongoose": "^6.2.9",
+    "nodemon": "^2.0.7"
   }
 }
