--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "joi": "^17.6.0",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.9",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7"
   }
 }
